# protocol

./: README.md
circuits/: .env.example  .gitignore  Cargo.toml  README.md  build-elf.sh  download_test_blocks.py  requirements.txt
circuits/core/: Cargo.toml
circuits/core/src/: btc_light_client.rs  constants.rs  lib.rs  lp.rs  payment.rs  sha256_merkle.rs  tx_hash.rs
circuits/elf/: riscv32im-succinct-zkvm-elf
circuits/lib/: Cargo.toml
circuits/lib/src/: errors.rs  lib.rs  proof.rs  transaction.rs
circuits/program/: Cargo.toml
circuits/program/src/: main.rs
circuits/script/: Cargo.toml
circuits/tests/: Cargo.toml
circuits/tests/src/bitcoin/: main.rs
circuits/tests/src/giga/: main.rs
circuits/tests/src/lp_hash/: main.rs
circuits/tests/src/payment/: main.rs
circuits/tests/src/sha256_merkle/: main.rs
circuits/tests/src/tx_hash/: main.rs
client-sdk/: Cargo.toml
contracts/: .gitignore  .prettierrc  README.md  download_test_block_hashes.py  foundry.toml  get_error_selectors.py  mythril.config.json  package.json  remappings.txt  slither.config.json
contracts/broadcast/DeployRiftExchange.s.sol/17000/: run-1727373658.json  run-1727424680.json  run-latest.json
contracts/broadcast/DeployRiftExchange.s.sol/42161/: run-1727506437.json  run-1727583821.json  run-1727585939.json  run-1727594893.json  run-1728039388.json  run-1728040765.json
contracts/broadcast/DeployRiftExchange.s.sol/421614/: run-1727466568.json  run-1727466735.json  run-1727722910.json  run-1727733478.json  run-1727736607.json  run-1727736719.json  run-1727738605.json  run-1727741287.json  run-1727766778.json  run-1727921239.json  run-1727921412.json  run-1727927550.json  run-1727938187.json  run-1727939389.json  run-1727986064.json  run-1727986372.json  run-1727987078.json  run-1727987419.json  run-1727987733.json  run-1727988348.json  run-1728024038.json  run-1728026668.json
contracts/broadcast/UpgradeRiftExchange.s.sol/42161/: run-1728096019.json  run-1728113859.json  run-1728162114.json  run-1728253222.json  run-1728422859.json  run-1728790342.json
contracts/scripts/: DeployRiftExchange.s.sol  UpgradeRiftExchange.s.sol
contracts/src/: BlockHashStorageUpgradeable.sol  RiftExchange.sol  RiftExchangev0.sol
contracts/tests/: BlockHashStorageTest.t.sol  ExchangeTestBase.t.sol  LiquidityTest.t.sol  MockUSDT.sol  SwapTest.t.sol  TestBlocks.sol
data-aggregation-contracts/: .gitignore
data-aggregation-contracts/src/: BlockHeaderAggregator.sol  DepositVaultsAggregator.sol  SwapReservationsAggregator.sol
e2e-tests/: .gitignore  Cargo.toml  README.md  e2e-test.sh
e2e-tests/src/: constants.rs  core.rs  lib.rs  sp1_verifier_bytecode.rs
e2e-tests/tests/: main.rs
hypernode/: .gitignore  Cargo.toml  sync.sh
hypernode/artifacts/: BlockHeaderAggregator.json  DepositVaultsAggregator.json  ERC1967Proxy.json  IERC20.json  MockUSDT.json  RiftExchange.json
hypernode/src/: btc_indexer.rs  btc_rpc.rs  constants.rs  core.rs  evm_block_trigger.rs  evm_indexer.rs  lib.rs  node.rs  proof_broadcast.rs  proof_builder.rs
