[workspace]
members = [
    "core",
    "program",
    "script",
    "tests",
    "lib",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.7.7"
hex-literal = "0.4.1"
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
sp1-sdk = "2.0.0"
sp1-helper = "2.0.0"
sp1-zkvm = "2.0.0"
bitcoin = { version = "0.32.2", default-features = false }
bincode = "1.3.3"
serde_with = "3.9.0"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", package= "crypto-bigint", branch = "patch-v0.5.5" }

