[package]
version = "0.1.0"
name = "rift-script"
edition = "2021"
default-run = "plonk_test"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "plonk_test"
path = "src/bin/plonk_test.rs"

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
rift-lib = { path = "../lib" }
sp1-sdk = { workspace = true }
clap = { workspace = true }
bitcoin = { workspace = true }
rift-core = { path = "../core" }
hex-literal = { workspace = true } 
crypto-bigint = { workspace = true } 


[build-dependencies]
sp1-helper = { workspace = true } 
